<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00FC3A3A">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="20dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
               >

                    <EditText
                        android:id="@+id/sms_choice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="text"
                        android:text="SMS"
                        android:textColor="#757575"
                        android:textColorHint="@color/white"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/email_choice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:inputType="text"
                        android:text="EMAIL"
                        android:textColor="#757575"
                        android:textColorHint="@color/white"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                app:startIconDrawable="@drawable/ic_person">

                <EditText
                    android:id="@+id/receiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/receiver"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                app:startIconDrawable="@drawable/ic_person">

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/confirm_sending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    >
                </androidx.appcompat.widget.AppCompatButton>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_sending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    >

                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>